# consensusai

./: .env.example  .gitignore  CHANGELOG.md  CLI_COMMANDS.md  CONTRIBUTING.md  GEMINI_JSON_FIX_SUMMARY.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  check_orders.py  consensus_engine.py  env.example  pyproject.toml  pytest.ini  requirements.txt  scheduler.py
.cursor/rules/: main-project-rules.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  models.py  tasks.py
app/routers/: __init__.py  health.py  portfolio.py
app/services/: __init__.py  alpaca.py  json_parser.py  llm.py  rebalance.py  triggers.py
tests/: __init__.py  conftest.py  test_alpaca_service.py  test_api.py  test_full_workflow.py  test_llm_service.py  test_main.py  test_single_advisor.py
